--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
