--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "firebase": "^10.7.1",
     "multi-step-form": "^0.1.1",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
