--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.18",
     "antd": "^5.13.1",
     "axios": "^1.6.7",
+    "eslint": "^8.57.0",
     "firebase": "^10.7.1",
     "multi-step-form": "^0.1.1",
     "prettier": "^3.2.5",
