--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@reduxjs/toolkit": "^2.1.0",
@@ -67,5 +68,9 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/alicodeuz/my-schedule.git",
+  "author": "Kamola Kobilova <kamola_8880@mail.ru>",
+  "license": "MIT"
 }
