--- a/package.json
+++ b/package.json
@@ -66,11 +66,10 @@
     "@testing-library/react": "^14.1.2",
     "@types/styled-components": "^5.1.34",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-jsx-a11y": "^6.8.0"
   },
   "main": "index.js",
   "repository": "https://github.com/alicodeuz/my-schedule.git",
-  "author": "Kamola Kobilova <kamola_8880@mail.ru>",
+  "author": "Kamola Kobilova <kamola_8880@mail.ru>, Dinora Diyorovna <acullen647@gmail.com>",
   "license": "MIT"
 }
